--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "kaan-backend",
   "version": "1.0.0",
-  "description": "**Kaan** is a B2B platform that enables bulk buying with a collaborative twist. This is the backend system built with **Node.js**, **Express**, and **PostgreSQL**, using **Prisma ORM**.",
-  "main": "index.js",
+  "description": "Kaan Backend - B2B Platform for Bulk Buying",
+  "main": "dist/app.js",
   "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "start": "node dist/app.js",
     "dev": "nodemon src/app.ts",
     "build": "tsc",
-    "start": "node dist/app.js",
-    "prisma": "prisma"
+    "test": "jest",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate deploy",
+    "postinstall": "npm run prisma:generate && npm run build"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "repository": {
     "type": "git",
@@ -23,27 +27,26 @@
   },
   "homepage": "https://github.com/kaan-market/kaan-backend#readme",
   "dependencies": {
-    "@prisma/client": "^6.6.0",
-    "@types/cors": "^2.8.17",
-    "bcrypt": "^5.1.1",
-    "bcryptjs": "^3.0.2",
+    "@prisma/client": "^5.0.0",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "prisma": "^6.6.0",
-    "twilio": "^5.5.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "twilio": "^4.7.2"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/express": "^5.0.1",
-    "@types/jest": "^29.5.14",
-    "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "^22.14.0",
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.9",
-    "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.0",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/node": "^18.15.11",
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
+    "prisma": "^5.0.0",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   }
 }
